<resources>
    <string name="app_name">NitroTech</string>
    <string name="loginP">Login</string>
    <string name="EmailAddress">Email</string>
    <string name="TextPassword">Password</string>
    <string name="btnsignin">SIGN IN</string>
    <string name="loginPage">Login Page</string>
    <string name="textView">Don\'t have an account yet?</string>
    <string name="signupbtn">SIGN UP</string>
    <string name="textName">Name</string>
    <string name="userName">Username</string>
    <string name="textEmailAddress">Email</string>
    <string name="textPassword">Password</string>
    <string name="textViewOrders">Orders</string>
    <string name="textViewOrderCount">1</string>
    <string name="orderid">1200</string>
    <string name="editprofilebtn">Edit Profile</string>
    <string name="wishlistbtn">My Wishlist</string>
    <string name="mywishlistbtn">Wishlist</string>
    <string name="addressbookbtn">Address Book</string>
    <string name="logoutbtn">LOG OUT</string>
    <string name="editUsername">Username</string>
    <string name="updatebtn">Update</string>
    <string name="textview33">Delete your account</string>
    <string name="deleteaccounttext">Delete account</string>
    <string name="makesuretext">Make sure you want to do this.</string>
    <string name="deleteconfirmbtn">YEP, DELETE IT</string>
    <string name="deletecanclebtn">CANCEL</string>
    <string name="textAddress">Address</string>
    <string name="editTextPhone">Contact number</string>
    <string name="savebtn">SAVE</string>
    <string name="removebtncart">Remove</string>
    <string name="addTobtncart2">check out</string>
    <string name="paymenttext">Payment</string>
    <string name="totalamounttext">Total Amount</string>
    <string name="totalamounttext3">Account NO</string>
    <string name="totalamounttext4">0000450025</string>
    <string name="totalamounttext5">Branch</string>
    <string name="totalamounttext6">Malabe</string>
    <string name="attachtext">Attach your image here</string>
    <string name="attachtext2">(PNG, JPG)</string>
    <string name="attachfilebtn">Attach File</string>
    <string name="confirmbtn">Confirm payment</string>
</resources>