<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C24"
    tools:context=".LoginPage">

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="319dp"
        android:layout_height="54dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/TextPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"

        android:backgroundTint="@color/orange_500"
        android:onClick="redirectProfilePage"
        android:text="@string/btnsignin"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/textView"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/orange_500"
        android:foregroundTint="#06AF0D"
        android:onClick="redirectSignupPage"
        android:text="@string/signupbtn"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>