<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C24"
    tools:context=".CheckoutPage">

    <TextView
        android:id="@+id/paymenttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/paymenttext"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalamounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="40dp"
        android:text="@string/totalamounttext"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymenttext" />

    <TextView
        android:id="@+id/totalamounttext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:text="364,000.00"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalamounttext"
        app:layout_constraintTop_toBottomOf="@+id/paymenttext" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="382dp"
        android:layout_height="125dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymenttext">

    </FrameLayout>

    <TextView
        android:id="@+id/totalamounttext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/totalamounttext3"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3" />

    <TextView
        android:id="@+id/totalamounttext4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/totalamounttext4"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3" />

    <TextView
        android:id="@+id/totalamounttext5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/totalamounttext5"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
        app:layout_constraintTop_toBottomOf="@+id/totalamounttext3" />

    <TextView
        android:id="@+id/totalamounttext6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/totalamounttext6"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
        app:layout_constraintTop_toBottomOf="@+id/totalamounttext4" />

    <TextView
        android:id="@+id/attachtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/attachtext"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <TextView
        android:id="@+id/attachtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:text="@string/attachtext2"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attachtext" />

    <Button
        android:id="@+id/attachfilebtn"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/attachfilebtn"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attachtext"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <Button
        android:id="@+id/confirmbtn"
        android:layout_width="210dp"
        android:layout_height="69dp"
        android:layout_marginTop="200dp"
        android:text="@string/confirmbtn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="394dp"
        android:layout_height="39dp"
        android:background="@color/orange_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmbtn"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/shopping" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="340dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/female" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>