<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C24"
    tools:context=".ConfirmDelete">

    <Button
        android:id="@+id/deletecanclebtn"
        android:layout_width="127dp"
        android:layout_height="81dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="43dp"
        android:text="@string/deletecanclebtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deleteconfirmbtn"
        app:layout_constraintTop_toBottomOf="@+id/makesuretext" />

    <TextView
        android:id="@+id/makesuretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:text="@string/makesuretext"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteconfirmbtn"
        android:layout_width="169dp"
        android:layout_height="81dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/deleteconfirmbtn"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makesuretext" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="394dp"
        android:layout_height="39dp"
        android:background="@color/orange_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteconfirmbtn"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/shopping" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="340dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/female" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>