<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C24"
    tools:context=".ProfilePage">

    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="211dp"
        android:text="Madushan S.H.K"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="216dp"
        android:text="kavindu811@gmail.com"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfile" />

    <TextView
        android:id="@+id/textViewOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:text="@string/textViewOrders"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="143dp"
        android:layout_height="148dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textVieworderid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="155dp"
        android:text="1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrders" />

    <Button
        android:id="@+id/editprofilebtn"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@color/orange_500"
        android:onClick="clickEditProfileBtn"
        android:text="@string/editprofilebtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewemail" />

    <Button
        android:id="@+id/mywishlistbtn"
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@color/orange_500"
        android:onClick="clickWishListBtn"
        android:text="@string/mywishlistbtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editprofilebtn" />

    <Button
        android:id="@+id/addressbookbtn"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/orange_500"
        android:onClick="clickAddressBookBtn"
        android:text="@string/addressbookbtn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mywishlistbtn" />

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="258dp"
        android:background="@color/green"
        android:text="@string/logoutbtn"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressbookbtn" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="394dp"
        android:layout_height="39dp"
        android:background="@color/orange_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutbtn"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/shopping" />

        <ImageButton
            android:id="@+id/imageButton18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="340dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/female" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>